# nih-bootstrap

./: .gitignore  Cargo.toml  LICENSE  README.md
data/: general_info.toml
src/: config.rs  main.rs
src/commands/: dependencies.rs  git.rs  init.rs  mod.rs
src/platform/: linux.rs  mod.rs  windows.rs
src/templates/: mod.rs
templates/git/: ci_cd_general.yaml  gitignore.txt
templates/project/: cargo_project.txt  editor.txt  lib_iced.txt  main.txt
templates/xtask/: cargo_workspace.txt  cargo_xtask.txt
