[package]
name = "nih-bootstrap"
version = "0.1.0"
edition = "2024"
authors = ["Johannes Jyrgenson <johannes.jyrgenson@gmail.com>"]
description = "Bootstrapper for NIH-plugin development on mac, windows and linux"
license = "MIT"
repository = ""
readme = "README.md"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.53", features = ["derive"] }
console = "0.16.2"
dialoguer = "0.12.0"
serde = {version = "1.0.228", features = ["derive"] }
toml = "0.9.10"
tokio = { version = "1.48.0", features = ["full"] }
thiserror = "2.0.17"

[dev-dependencies]
tempfile = "3.24.0"
